Monospace font default for temrinal window, disconnect accelerator, bugfix for lines starting with whitespace

--- a/public/style.less
+++ b/public/style.less
@@ -78,6 +78,8 @@ body {
   flex-direction: column;
   white-space: break-spaces;
   flex-shrink: 1; // Keeps this to fill remaining space
+  font-family:'Consolas','Courier New', Courier, monospace; // default for console games
+  padding:3px;
 }
 
 #appRoot {
